<resources>
    <string name="Speed_test_result_tool_bar">Speed Test Results</string>
    <string name="Telephone">Telephone</string>
    <string name="_2g_3g_4g">2G/3G/4G</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="all_operators">All operators</string>
    <string name="allcaps">All</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Opensignal</string>
    <string name="app_version_header">Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="assistant_permission_description">Allows the application to interact with the connectivity assistant module to detect and help users troubleshoot network connectivity issues.</string>
    <string name="assistant_permission_label">Connectivity assistant</string>
    <string name="assistant_solution_connect_to_wifi_message">You might try to connect to a WiFi, if your mobile network is slow.</string>
    <string name="assistant_solution_connect_to_wifi_title">Connect to WiFi</string>
    <string name="assistant_solution_contact_your_operator_message">You might try to contact your mobile operator and discuss to unblock your data.</string>
    <string name="assistant_solution_contact_your_operator_title">Contact your mobile operator</string>
    <string name="assistant_solution_cycle_airplane_mode_message">Try toggling Airplane mode on and off.</string>
    <string name="assistant_solution_cycle_airplane_mode_title">Cycle airplane mode</string>
    <string name="assistant_solution_disable_wifi_message">Try switching off WiFi from settings and enable mobile data connection.</string>
    <string name="assistant_solution_disable_wifi_title">Disable WiFi to use your mobile data connection</string>
    <string name="assistant_solution_login_wifi_connection_message">Try logging into your wifWiFii connection.</string>
    <string name="assistant_solution_login_wifi_connection_title">Log into WiFi connection</string>
    <string name="assistant_solution_move_closer_to_cellular_antenna_message">Try moving closer to the cellular antenna.</string>
    <string name="assistant_solution_move_closer_to_cellular_antenna_title">Move closer to cellular antenna</string>
    <string name="assistant_solution_move_closer_to_wifi_router_message">Try moving closer to the WiFi router you are connected to.</string>
    <string name="assistant_solution_move_closer_to_wifi_router_title">Move closer to WiFi router</string>
    <string name="assistant_solution_setup_esim_message">Try to setup/switch to an eSim instead.</string>
    <string name="assistant_solution_setup_esim_title">Setup eSim</string>
    <string name="assistant_solution_switch_to_wifi_message">You might try to connect to a WiFi, if your mobile network is blocked by your mobile operator.</string>
    <string name="assistant_solution_switch_to_wifi_title">Switch to WiFi</string>
    <string name="assistant_solution_switch_wifi_connection_message">Try changing WiFi connection.</string>
    <string name="assistant_solution_switch_wifi_connection_title">Change WiFi connection</string>
    <string name="assistant_solution_turn_off_4g_5g_message">Try toggling 4G/5G off and on.</string>
    <string name="assistant_solution_turn_off_4g_5g_title">Turn off 4G/5G</string>
    <string name="assistant_solution_turn_off_airplane_message">Try turning off Airplane mode.</string>
    <string name="assistant_solution_turn_off_airplane_title">Turn off airplane mode</string>
    <string name="assistant_solution_turn_on_mobile_data_message">You might try to enable mobile data if it is disabled.</string>
    <string name="assistant_solution_turn_on_mobile_data_title">Turn on mobile data</string>
    <string name="autofill">Autofill</string>
    <string name="background_location_subtitle_using_app">While using the app</string>
    <string name="bad_coverage">Bad\ncoverage</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="buffering_label">Buffering</string>
    <string name="bugs_mail">bugs@opensignal.com</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_refresh_map">Can\'t refresh map. Did you enable Location and grant Location permissions?</string>
    <string name="card_cell_cell_id">CELL ID</string>
    <string name="card_cell_lac">LAC</string>
    <string name="card_reported_by_opensignal_users">Based on contributed signal readings.</string>
    <string name="cell">Cell</string>
    <string name="cell_radio_off">Cell radio off</string>
    <string name="cell_tower">Cell Tower</string>
    <string name="cell_towers">Cell Towers</string>
    <string name="cell_towers_list">Cell Towers list</string>
    <string name="cells">Cell Towers</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chooser_title_mail">Send mail...</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="client_identifier_text">ID</string>
    <string name="close">Close</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_search_city">Close search city</string>
    <string name="close_sheet">Close sheet</string>
    <string name="connected_tower">Connected tower</string>
    <string name="download_speed">Download Speed</string>
    <string name="exit_dialog_negative">Don\'t close</string>
    <string name="exit_dialog_positive">Close app</string>
    <string name="exit_dialog_title">This action will close the app</string>
    <string name="exit_filter">Exit filter</string>
    <string name="latency">Latency</string>
    <string name="mvno_explanation">There are 2 types of operators - those that own their own infrastructure of towers (\"host operators\") and those which rent infrastructure (\"virtual operators\"). Opensignal only shows the host operators, so if you are on a virtual operator, you need to find out the host operator to use the maps and Network Stats.</string>
    <string name="mvno_title">The operator is a \"virtual\" operator (MVNO)</string>
    <string name="network_rank_header_explanation">The Network Stats shows how users in the area on the map experienced their network on average over a 60-day period.</string>
    <string name="network_rank_latency_explanation">A latency test is a very quick test which measures how fast a tiny amount of data can be sent from your phone to the internet and back again. A low latency is good for voice or video calls over the internet - for example Skype or Apple\'s FaceTime.</string>
    <string name="network_rank_speed_explanation">Download speed is how fast data can be downloaded to your device. The result is measured in megabits per second (Mbps). A high download speed is good for fast web browsing and streaming video.</string>
    <string name="network_rank_upload_explanation">Our upload test measures how fast data can be uploaded from your device to the internet. The result is measured in megabits per second (MBps). A high upload speed is good for fast sharing of photos or videos to social networks like Facebook or Twitter.</string>
    <string name="network_stats_title">Network Stats</string>
    <string name="no_data_collected_explanation">We\'ve had millions of downloads worldwide, and our users contribute billions of signal readings and speed tests every day. However, our users haven\'t contributed data on their networks everywhere. If your operator is not listed, try changing the zoom or moving the map. Help us collect the most accurate mobile network stats by using the app to contribute data about your experience.</string>
    <string name="no_data_collected_title">No data collected</string>
    <string name="operator_not_listed">Operator not listed</string>
    <string name="operator_not_listed_explanation">There are a few reasons why your operator might not be in Network Stats.</string>
    <string name="rating_error_select_stars">Select the stars to rate</string>
    <string name="rating_let_us_know_message">Let us know what you don\'t like about the app</string>
    <string name="rating_let_us_know_message_hint">I would...</string>
    <string name="rating_let_us_know_message_skip">Skip</string>
    <string name="rating_let_us_know_send">Send</string>
    <string name="rating_let_us_know_title">Help us</string>
    <string name="rating_message">How would you rate your experience using the app?</string>
    <string name="rating_not_now">Not now</string>
    <string name="rating_rate">Rate</string>
    <string name="rating_title">Enjoying Opensignal?</string>
    <string name="search_city">Search city</string>
    <string name="settings_notification_type_all">Everything</string>
    <string name="settings_notification_type_sound">Sound</string>
    <string name="settings_notification_type_statusbar">Statusbar icon only</string>
    <string name="settings_notification_type_vibrate">Vibrate</string>
    <string name="upload_speed">Upload Speed</string>
</resources>