<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:layout_gravity="center"
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operator_not_listed"
            style="@style/ToolbarGoldStar"/>
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:textColor="@color/neutral_1"
        android:id="@+id/infoDialog"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/operator_not_listed_explanation"
        android:layout_below="@+id/toolbar"/>
    <View
        android:id="@+id/infoDivider"
        android:layout_below="@+id/infoDialog"
        style="@style/Divider.dark"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/infoDivider">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin">
            <TextView
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/neutral_1"
                android:id="@+id/tvMvnoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mvno_title"/>
            <TextView
                android:textColor="@color/neutral_1"
                android:id="@+id/tvExplanationDownload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/mvno_explanation"
                android:layout_below="@+id/tvMvnoTitle"
                android:lineSpacingExtra="5dp"/>
            <View
                android:id="@+id/vSpacer"
                android:background="@color/osm_grey"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:layout_below="@+id/tvExplanationDownload"/>
            <TextView
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/neutral_1"
                android:id="@+id/tvNoDataTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data_collected_title"
                android:layout_below="@+id/vSpacer"/>
            <TextView
                android:textColor="@color/neutral_1"
                android:id="@+id/tvExplanationNoData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/no_data_collected_explanation"
                android:layout_below="@+id/tvNoDataTitle"
                android:lineSpacingExtra="5dp"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
