<?xml version="1.0" encoding="utf-8"?>
<androidx.percentlayout.widget.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/primary_2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/connected_tower"
        app:layout_widthPercent="56%"
        style="@style/TowerList.Header"/>
    <TextView
        android:gravity="right"
        android:id="@+id/tvCid"
        android:text="@string/card_cell_cell_id"
        android:layout_toRightOf="@+id/tvTitle"
        app:layout_widthPercent="20%"
        style="@style/TowerList.Header"/>
    <TextView
        android:gravity="right"
        android:id="@+id/tvLac"
        android:text="@string/card_cell_lac"
        android:layout_toRightOf="@+id/tvCid"
        app:layout_widthPercent="24%"
        style="@style/TowerList.Header"/>
</androidx.percentlayout.widget.PercentRelativeLayout>
