<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/primary_3"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/primary_3"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:layout_gravity="center"
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_stats_title"
            style="@style/ToolbarGoldStar"/>
    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout
        android:id="@+id/textGdprSettingsHeader"
        android:background="@color/primary_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/keyline_2"
        android:layout_marginRight="@dimen/keyline_2"
        android:layout_below="@+id/toolbar">
        <TextView
            android:textColor="@color/white"
            android:id="@+id/infoDialog"
            android:background="@color/primary_3"
            android:paddingTop="@dimen/keyline_1"
            android:paddingBottom="@dimen/keyline_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/network_rank_header_explanation"/>
        <View
            android:layout_below="@+id/infoDialog"
            style="@style/Divider.dark"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textGdprSettingsHeader">
        <RelativeLayout
            android:background="@color/primary_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_below="@+id/textGdprSettingsHeader">
            <TextView
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/tvDownloadTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_speed"/>
            <TextView
                android:textColor="@color/white"
                android:id="@+id/tvExplanationDownload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/network_rank_speed_explanation"
                android:layout_below="@+id/tvDownloadTitle"
                android:lineSpacingExtra="5dp"/>
            <View
                android:id="@+id/vSpacer"
                android:background="@color/osm_grey"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:layout_below="@+id/tvExplanationDownload"/>
            <TextView
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/tvUploadTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_speed"
                android:layout_below="@+id/vSpacer"/>
            <TextView
                android:textColor="@color/white"
                android:id="@+id/tvExplanationUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/network_rank_upload_explanation"
                android:layout_below="@+id/tvUploadTitle"
                android:lineSpacingExtra="5dp"/>
            <View
                android:id="@+id/vSpacer2"
                android:background="@color/osm_grey"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:layout_below="@+id/tvExplanationUpload"/>
            <TextView
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/tvLatencyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latency"
                android:layout_below="@+id/vSpacer2"/>
            <TextView
                android:textColor="@color/white"
                android:id="@+id/tvExplanationLatency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/network_rank_latency_explanation"
                android:layout_below="@+id/tvLatencyTitle"
                android:lineSpacingExtra="5dp"/>
            <android.widget.Space
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/tvExplanationLatency"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
