<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/layoutSearchLocationWidget"
    android:background="@drawable/rect_white_rounded_corners"
    android:layout_width="match_parent"
    android:layout_height="@dimen/coverage_tab_filters_tab_height"
    android:elevation="8dp">
    <ImageButton
        android:textSize="20sp"
        android:id="@+id/btExitPlaceFilter"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="44dp"
        android:layout_height="32dp"
        android:layout_marginRight="12dp"
        android:src="@drawable/ic_arrow_back_black_36dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/exit_filter"
        style="?android:attr/borderlessButtonStyle"/>
    <AutoCompleteTextView
        android:textColor="@color/black"
        android:textColorHint="@color/active_grey_dark"
        android:id="@+id/tvSearchLocation"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/search_city"
        android:completionThreshold="1"
        android:layout_toRightOf="@+id/btExitPlaceFilter"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:backgroundTint="@android:color/transparent"/>
    <ImageButton
        android:textSize="20sp"
        android:id="@+id/btClearPlaceFilter"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="44dp"
        android:layout_height="32dp"
        android:layout_marginRight="12dp"
        android:src="@drawable/ic_close_grey"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/close_search_city"
        style="?android:attr/borderlessButtonStyle"/>
</RelativeLayout>
